--- a/LobbyAPP/Views/Lobby/Index.cshtml
+++ b/LobbyAPP/Views/Lobby/Index.cshtml
@@ -12,9 +12,29 @@
     </div>
     <br />
 
+    @if(TempData["MensagemSucesso"] != null)
+    {
+         <div class="alert alert-success" role="alert">
+        <button type="button" class="btn btn-danger btn-sm close-alert" arial-label="Close">X</button>
+        @TempData["MensagemSucesso"]
+    </div>        
+    }
+
+    @if (TempData["MensagemErro"] != null)
+    {
+        <div class="alert alert-danger" role="alert">
+            <button type="button" class="btn btn-danger btn-sm close-alert" arial-label="Close">X</button>
+            @TempData["MensagemErro"]
+        </div>
+    }
+
+ 
+
+    <br />
+
     <h1 class="display-4">Onde irá ser a gameplay de hoje?</h1>
 
-    <table class="table">
+    <table class="table" id="table-lobbys">
         <thead>
             <tr>
                 <th scope="col">#</th>
