--- a/LobbyAPP/Views/Lobby/Apagar.cshtml
+++ b/LobbyAPP/Views/Lobby/Apagar.cshtml
@@ -11,6 +11,6 @@
 
 <div class="d-grid gap-2">
 <a class="btn btn-primary" role="button" asp-controller="Lobby" asp-action="Index">Cancelar exclusão</a>
-<a class="btn btn-danger" role="button" asp-controller="Lobby" asp-action="Apagar">Confirmar exclusão</a>
+<a class="btn btn-danger" role="button" asp-controller="Lobby" asp-action="ApagarConfirmacao" asp-route-id="@Model.Id">Confirmar exclusão</a>
 
 </div>
